kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lightweight-orchestration
  labels:
    name: lightweight-orchestration
